--- a/index.html
+++ b/index.html
@@ -1,30 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <title>Code Assessment</title>
-    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 <body>
+
+    <main>
 <header>
-    <div class="score"><h6>View Highscores</h6></div>
-    <div id="timer"><h6>Timer: <span class="time">0</span></h6></div>
+    <div class="score"><h4>View Highscores</h4></div>
+    <div id="timer"><h4>Timer: <span class="time">0</span></h4></div>
 </header>
 
-<section class="quiz-info">
-    <h1>Code Assessment</h1>
+<div class="quiz-info" id="quiz-style">
+    <h1 id="style-h1">Code Assessment</h1>
     <p id="info-blurb">Try answering these code-related questions within the time limit.
         Keep in mind that the wrong answers will penalize your time by ten seconds!
     </p>
     <button id="btn-start">Start Quiz</button>
-</section>
+</div>
 
 
 <div id="quiz"></div>
-<button id="submit"></button>
-<div id="results"></div>
+<button id="submit">Submit</button>
+<button id="result-btn">See Results</button>
+</main>
 
-
-<script src="/assets/java/script.js"></script>
+<script src="./assets/java/script.js"></script>
 </body>
 </html>
