updated some script

--- a/scores.html
+++ b/scores.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <header>
-            <h1>High Scores</h1>
+            <h1 class="hs-header">High Scores</h1>
         </header>
 
         <div class="hs-body">
