--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
 <footer>
     <h2>Coded by <span>Leesa G.</span></h2>
 </footer>
-<script src="./assets/java/script.js"></script>
+<script src="../java/script.js"></script>
 </body>
 </html>
