--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Code Assessment</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
@@ -22,6 +22,6 @@
 <footer>
     <h2>Coded by <span>Leesa G.</span></h2>
 </footer>
-<script src="./script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
